 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-5157: Upgrade to Spark 2.0 (nkollar via liyunzhang)

PIG-5237: Fix DOT file parsing to enable DOT-based physical plan testing (YaShock via szita)

PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5246: Modify bin/pig about SPARK_HOME, SPARK_ASSEMBLY_JAR after upgrading spark to 2 (liyunzhang)

PIG-3655: BinStorage and InterStorage approach to record markers is broken (szita)

PIG-5274: TestEvalPipelineLocal#testSetLocationCalledInFE is failing in spark mode after PIG-5157 (nkollar via szita)

PIG-4767: Partition filter not pushed down when filter clause references variable from another load path (knoguchi)

PIG-5270: Typo in Pig Logging (FromAlaska49 via daijy)

PIG-5263: Using wildcard doesn't work with OrcStorage (satishsaley via rohini)

PIG-4548: Records Lost With Specific Combination of Commands and Streaming Function (knoguchi)

PIG-5262: Fix jdiff related issues: fail build upon error, correct xml character escaping (szita)

PIG-5225: Several unit tests are not annotated with @Test (nkollar via rohini)


Release 0.17.0
 
INCOMPATIBLE CHANGES

PIG-5085: Support FLATTEN of maps (szita via rohini)

PIG-4728: Compilation against hbase 1.x fails with hbase-hadoop1-compat not found (szita via rohini)

PIG-4897: Scope of param substitution for run/exec commands (knoguchi)

PIG-4923: Drop Hadoop 1.x support in Pig 0.17 (szita via rohini)
